# math_content_engine

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONFIGURATION_CHANGES_SUMMARY.md  E2E_VERIFICATION_REPORT.md  E2E_WORKFLOW_DOCUMENTATION.md  Makefile  PDF_PARSER_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PLAN.md  PR_SUMMARY.md  QUICK_E2E_GUIDE.md  QUICK_START_REFACTORING.md  README.md  REFACTORING_SUMMARY.md  REORGANIZATION_VERIFICATION.md  RESEARCH_FINDINGS.md  TEMPLATE_SYSTEM_EXPLAINED.md  TEST_READY.md  UPDATED_SCRIPTS_SUMMARY.md  cloudbuild.yaml  playground.md  pyproject.toml  requirements.txt  test.md  test_final.md
.claude/: README.md
curriculum/algebra1/: README.md  algebra_knowledge_graph.json  algebra_knowledge_graph_enriched.json  animation_topics.md  common_core_standards.md  content_textbook_exercise_links.json  curriculum_map.md  generate_personalized_chapter.py  regenerate_chapter2_opus.py  topics_by_difficulty.md
curriculum/textbooks/: ALGEBRA_TEXTBOOKS_REFERENCE.md  (+3 more)
docker/: Dockerfile.engine
docs/: CONFIGURATION.md  ELEVENLABS_TTS.md  PDF_PARSING_GUIDE.md
examples/: README.md  advanced_usage.py  algebra_high_school.py  algebra_middle_school.py  basic_usage.py  config_demo.py  generate_all_styles.py  graphical_algebra.py  narrated_graphical_equation.py  pdf_parsing_example.py  template_usage.py
scripts/: README.md  deploy-playground.sh  enrich_knowledge_graph.py  generate_personalized_textbook.py  math_to_manim_quickstart.py  parse_pdf.py  pdf_to_personalized_pipeline.py  personalized_content_pipeline.py  run_math_to_manim.py  textbook_to_animation.py  validate_knowledge_links.py
tests/: README.md  __init__.py  conftest.py  test_algebra_integration.py  test_api.py  test_code_extractor.py  test_concept_extractor.py  test_config.py  test_constants.py  test_e2e_chapter_1_3_basketball.py  test_e2e_personalized_data_service.py  test_elevenlabs_tts.py  test_elevenlabs_unit.py  test_engagement_fields.py  test_engagement_profile.py  test_engagement_store.py  test_integration.py  test_integration_data_service.py  test_integration_schemas.py  test_json_repair.py  test_llm_clients.py  test_pdf_parser.py  test_playground_prompt_builder.py  test_publisher.py  test_render_only.py  test_student_profile.py  test_templates.py  test_theme_mapper.py  test_validators.py  test_voice_video_sync.py
(+150 files in other folders)
